Bunch of fixes Fixed forfeit rate wrapping Fixed notes being shown/unshown for unseeded board Added ability to load board by url '#diversity'

--- a/public/css/leaderboards.css
+++ b/public/css/leaderboards.css
@@ -52,7 +52,7 @@ tr td.lb-status {
 }
 
 
-tr td.lb-last-race {
+tr td.lb-last-race, td.lb-num-for {
   padding: .35em;
   white-space: nowrap;
 }
